# portfolio-projects

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PATCH_IMPLEMENTATION_SUMMARY.md  PORTFOLIO.md  PROJGEN_ENHANCEMENTS.md  README.md  README_PATCHES.md  SECURITY.md  WORKSPACE  apply_patches.sh  build.gradle.kts  mkdocs.yml  portfolio.yaml  pr01.corrected.patch  pr01.fixed.patch  pr01.patch  pr01_clean.patch  pr02.fixed.patch  pr02.patch  pr02_clean.patch  pr03.fixed.patch  pr03.patch  pr03_clean.patch  pr04.fixed.patch  pr04.patch  pr04_clean.patch  pr05.fixed.patch  pr05.patch  pr05_clean.patch  pr06.fixed.patch  pr06.patch  pr06_clean.patch  pr07.fixed.patch  (+15 more)
ai-best-practices-examples/ai-code-assistant/: README.md  assistant-policy.toml  pyproject.toml
ai-best-practices-examples/ai-code-assistant/tests/: conftest.py  test_cli.py  test_llm_adapter.py  test_repo_scanner.py  test_test_generator.py
ai-best-practices-examples/ai-image-video-generator/: README.md  pyproject.toml
ai-best-practices-examples/ai-image-video-generator/scripts/: launch_sanity_check.sh
ai-best-practices-examples/ai-image-video-generator/tests/: test_app.py  test_app_flow.py  test_comfy_client.py  test_config.py  test_image_pipeline.py  test_local_client.py  test_models.py  test_review_gallery.py  test_smoke_comfyui.py  test_video_pipeline.py  test_watermark.py
ai-best-practices-examples/ai-image-video-generator/workflows/: image_generation.json  video_generation.json
ai-best-practices-examples/chat-ai/: README.md  pyproject.toml
ai-best-practices-examples/chat-ai/tests/: test_api_scaffold.py  test_chat_flows.py  test_memory.py  test_tools.py  test_ui.py
ai-best-practices-examples/domain-expert-ai/: .env.example  Makefile  README.md  pyproject.toml
ai-best-practices-examples/domain-expert-ai/reports/: baseline_vs_tuned.json  data_quality_report.json
ai-best-practices-examples/domain-expert-ai/tests/: test_cli_train_args.py  test_data_curation.py  test_dataset_schema.py  test_eval_pipeline.py  test_guardrails.py  test_training_pipeline.py
ai-best-practices-examples/knowledge-qa-system/: README.md  pyproject.toml
ai-best-practices-examples/knowledge-qa-system/tests/: conftest.py  test_chunking.py  test_health.py  test_ingest_and_chat.py
bazel-multibuild/frontend/: BUILD  BUILD.bazel  MODULE.bazel  bazel-bin  bazel-frontend  bazel-out  bazel-testlogs  package.json  pnpm-lock.yaml  tsconfig.json
bazel-multibuild/frontend/scripts/: run-tests.sh
bazel-multibuild/java/: BUILD  MODULE.bazel  bazel-bin  bazel-java  bazel-out  bazel-testlogs  container-structure-test.yaml
c0de-quality-and-analysis/api-breaking-change-detector/: README.md  pyproject.toml
c0de-quality-and-analysis/api-breaking-change-detector/config/: compatibility-policy.yml
c0de-quality-and-analysis/api-breaking-change-detector/scripts/: check-api-compat.sh
c0de-quality-and-analysis/api-breaking-change-detector/tests/: test_compatibility_rules.py
c0de-quality-and-analysis/dead-code-surface-reporter/: README.md  pyproject.toml
c0de-quality-and-analysis/dead-code-surface-reporter/config/: scoring.yml
c0de-quality-and-analysis/dead-code-surface-reporter/scripts/: run-report.sh
c0de-quality-and-analysis/dead-code-surface-reporter/tests/: test_prioritizer.py
c0de-quality-and-analysis/license-compliance-scanner/: README.md  pyproject.toml
c0de-quality-and-analysis/license-compliance-scanner/config/: license-policy.yml
c0de-quality-and-analysis/license-compliance-scanner/scripts/: run-scan.sh
c0de-quality-and-analysis/license-compliance-scanner/tests/: test_policy_engine.py
c0de-quality-and-analysis/security-hotspot-annotator/: README.md  pyproject.toml
c0de-quality-and-analysis/security-hotspot-annotator/config/: severity-policy.yml
c0de-quality-and-analysis/security-hotspot-annotator/scripts/: annotate-pr.sh
c0de-quality-and-analysis/security-hotspot-annotator/tests/: test_comment_formatter.py
cloud-native-patterns/10-wasm/: Cargo.toml  GUIDE.md
cloud-native-patterns/10-wasm/src/: lib.rs
dev-env/environment-drift-detector/: README.md  pyproject.toml
dev-env/environment-drift-detector/config/: canonical-toolchain.yaml
dev-env/environment-drift-detector/scripts/: run-detector.sh
dev-env/remote-dev-environment-orchestrator/: README.md  pyproject.toml
dev-env/remote-dev-environment-orchestrator/config/: workflow.yaml
dev-env/remote-dev-environment-orchestrator/scripts/: run-worker.sh
dev-ex/developer-satisfaction-pulse-system/: .env.example  Makefile  README.md  pyproject.toml
dev-ex/developer-satisfaction-pulse-system/docs/: architecture.md
dev-ex/developer-satisfaction-pulse-system/scripts/: dev.sh
dev-ex/developer-satisfaction-pulse-system/tests/: test_scoring.py
dev-ex/inner-loop-friction-scorer/: .env.example  Makefile  README.md  pyproject.toml
dev-ex/inner-loop-friction-scorer/docs/: metrics-model.md
dev-ex/inner-loop-friction-scorer/scripts/: dev.sh
dev-ex/inner-loop-friction-scorer/tests/: test_composite.py  test_main.py
dev-ex/platform-changelog-migration-generator/: .env.example  Makefile  README.md  pyproject.toml
dev-ex/platform-changelog-migration-generator/docs/: migration-strategy.md
dev-ex/platform-changelog-migration-generator/scripts/: dev.sh
dev-ex/platform-changelog-migration-generator/tests/: test_diff_engine.py  test_python_rewriter.py
projgen/: README.md  pyproject.toml  setup.py
projgen/src/: requirements.txt
projgen/src/generators/: __init__.py  scaffold.py
projgen/src/projgen/: cli.py  config.py  interactive.py  plugins.py  telemetry.py  validation.py
py-cli-proj/: pyproject.toml  setup.py
ws-chat-fast/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
ws-chat-fast/app/: chat.py
ws-chat-fast/templates/: chatroom.html  exclusivechatroom.html  login.html
ws-chat-fast/tests/: test_app.py  test_ws.py  test_ws_manager.py
ws-chat-fast/ws_chat/: chat.py  exclusive_chatroom.py  main.py  security.py  ws_manager.py
(+1658 files in other folders)
