[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projgen"
version = "0.1.0"
description = "CLI tool to scaffold Bazel/Gradle projects with opinionated defaults."
authors = [
    { name = "Terence Schumacher", email = "terenceschumacher@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "jinja2>=3.0"
]

[project.scripts]
projgen = "cli:cli"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "templates*"]