[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ws-chat-fast"
version = "0.1.0"
description = "Low-latency WebSocket chat demo with FastAPI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.0",
  "pydantic>=2.7.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.setuptools]
packages = ["ws_chat"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
