[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-image-video-generator"
version = "0.1.0"
description = "AI Image & Video Generator MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gradio>=4.44",
  "pydantic>=2.0",
  "requests>=2.31",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
