[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-qa-system"
version = "0.1.0"
description = "Knowledge Q&A System MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-chroma>=0.1.0",
  "langchain-huggingface>=0.1.0",
  "chromadb>=1.0.0",
  "sentence-transformers>=3.0.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "pypdf>=5.0.0",
  "opentelemetry-api>=1.27.0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
