load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

ts_project(
    name = "lib_ts",
    srcs = ["src/index.ts"],
    declaration = True,
    tsconfig = ":tsconfig",
    deps = [
        ":node_modules/typescript",
    ],
)

js_library(
    name = "lib",
    srcs = [":lib_ts"],
)

sh_test(
    name = "index_test",
    srcs = ["scripts/run-tests.sh"],
    data = [":lib"],
)
