"Bazel module for Java projects"

bazel_dep(name = "aspect_bazel_lib", version = "2.8.1")
bazel_dep(name="rules_java", version = "7.11.1", repo_name = "rules_java")
bazel_dep(name = "container_structure_test", version = "1.16.0")
bazel_dep(name="rules_jvm_external", version = "5.3")
bazel_dep(name = "rules_oci", version = "1.4.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.13.2",
        "com.google.guava:guava:28.0-jre",
    ],
    fetch_sources = True,
    repositories = [
        "http://uk.maven.org/maven2",
        "https://repo.maven.apache.org/maven2",
        "https://jcenter.bintray.com/",
    ],
)
use_repo(maven, "maven")

oci = use_extension("@rules_oci//:extensions.bzl", "oci")
oci.pull(
    name = "distroless_java",
    image = "gcr.io/distroless/java:17",
)

use_repo(oci, "distroless_java")